--- a/packages/debounce/package.json
+++ b/packages/debounce/package.json
@@ -29,14 +29,13 @@
     "rooks",
     "react-hooks.org"
   ],
-  "version": "3.2.4",
+  "version": "3.3.0-alpha.0",
   "_id": "@rooks/use-debounce@",
   "publishConfig": {
     "access": "public"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": ">=16.8.0"
   },
   "dependencies": {
     "lodash.debounce": "4.0.8"
