--- a/packages/did-update/package.json
+++ b/packages/did-update/package.json
@@ -27,14 +27,13 @@
     "rooks",
     "react-hooks.org"
   ],
-  "version": "3.2.4",
+  "version": "3.3.0-alpha.0",
   "_id": "@rooks/use-did-update@",
   "publishConfig": {
     "access": "public"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": ">=16.8.0"
   },
   "gitHead": "f43acc975b37606ed1a7a1438ca33b896fcd1213"
 }
