--- a/packages/key/package.json
+++ b/packages/key/package.json
@@ -29,14 +29,13 @@
     "keyboard event",
     "key"
   ],
-  "version": "3.2.4",
+  "version": "3.3.0-alpha.1",
   "_id": "@rooks/use-key@",
   "publishConfig": {
     "access": "public"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": ">=16.8.0"
   },
   "gitHead": "f43acc975b37606ed1a7a1438ca33b896fcd1213"
 }
