--- a/packages/keys/package.json
+++ b/packages/keys/package.json
@@ -23,10 +23,9 @@
     "react-hooks.org"
   ],
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": ">=16.8.0"
   },
-  "version": "3.2.4",
+  "version": "3.3.0-alpha.0",
   "_id": "@rooks/use-keys@",
   "publishConfig": {
     "access": "public"
