--- a/packages/localstorage/package.json
+++ b/packages/localstorage/package.json
@@ -28,14 +28,13 @@
     "rooks",
     "hooks"
   ],
-  "version": "3.2.4",
+  "version": "3.3.0-alpha.0",
   "_id": "@rooks/use-localstorage@",
   "publishConfig": {
     "access": "public"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": ">=16.8.0"
   },
   "gitHead": "f43acc975b37606ed1a7a1438ca33b896fcd1213"
 }
