--- a/packages/mutation-observer/package.json
+++ b/packages/mutation-observer/package.json
@@ -31,14 +31,13 @@
     "mutation observer",
     "mutation observer hook"
   ],
-  "version": "3.2.4",
+  "version": "3.3.0-alpha.0",
   "_id": "@rooks/use-mutation-observer@",
   "publishConfig": {
     "access": "public"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": ">=16.8.0"
   },
   "gitHead": "f43acc975b37606ed1a7a1438ca33b896fcd1213"
 }
