--- a/packages/on-window-resize/package.json
+++ b/packages/on-window-resize/package.json
@@ -29,13 +29,12 @@
     "window",
     "resize"
   ],
-  "version": "3.2.4",
+  "version": "3.3.0-alpha.0",
   "publishConfig": {
     "access": "public"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": ">=16.8.0"
   },
   "gitHead": "f43acc975b37606ed1a7a1438ca33b896fcd1213"
 }
