--- a/packages/time-ago/package.json
+++ b/packages/time-ago/package.json
@@ -29,7 +29,7 @@
     "timeago.js",
     "timeago hook"
   ],
-  "version": "3.2.4",
+  "version": "3.3.0-alpha.0",
   "_id": "@rooks/use-time-ago@",
   "publishConfig": {
     "access": "public"
@@ -38,8 +38,7 @@
     "timeago.js": "4.0.0-beta.1"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": ">=16.8.0"
   },
   "gitHead": "f43acc975b37606ed1a7a1438ca33b896fcd1213"
 }
